<resources>
    <string name="app_name">Fasters</string>

    <string name="database_name">worldcities</string>
    <string name="key_database_version_template">database_%s_version</string>
    <string name="latest_database_worldcities_version">3</string>


    <!--Actions-->

    <string name="action_start_reminders_service">com.basilalasadi.fasters.START_REMINDERS_SERVICE</string>


    <!--Labels-->

    <string name="set_location">Set Location</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="ishaa">Ishaa</string>
    <string name="magrib">Magrib</string>
    <string name="asr">Asr</string>
    <string name="duhr">Duhr</string>
    <string name="fajr">Fajr</string>
    <string name="prayer_times">Prayer times</string>
    <string name="time_till">Time till</string>
    <string name="current_time">Current time</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="time_separator">:</string>
    <string name="time_until_break_fast">Time until break-fast</string>


    <!--Settings labels-->

    <string name="settings">Settings</string>

    <string name="location">Location</string>

    <string name="automatic_location">Automatic Location</string>
    <string name="automatic_location_summary">This app will never share your location. It will only be stored on your device to provide you with timings relevant to you.</string>

    <string name="manual_location">Manual Location</string>
    <string name="manual_location_summary">Alternatively, you can enter your country and city below, and the app will lookup its coordinates in a built-in database.</string>

    <string name="method">Method</string>

    <string name="calculation_method">Calculation Method</string>

    <string name="custom">Custom</string>
    <string name="fajr_sun_angle">Fajr Sun Angle</string>
    <string name="shafai_method_for_asr">Shafai Method for Asr</string>
    <string name="isha_sun_angle">Isha Sun Angle</string>
    <string name="isha_calculation_method">Isha Calculation Method</string>
    <string name="isha_offset_from_magrib">Isha Offset from Magrib</string>
    <string name="use_different_offset_for_ramadan">Use different offset for Ramadan</string>
    <string name="ramadan_isha_offset">Ramadan Isha Offset</string>


    <string name="theme">Theme</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="about_fasters">About Fasters</string>
    <string name="open_source_licenses">Open-source Licenses</string>


    <!--Settings keys-->
    <string name="settings_key_initialized">settings_initialized</string>
    <string name="settings_key_country">country</string>
    <string name="settings_key_city">city</string>
    <string name="settings_key_longitude">longitude</string>
    <string name="settings_key_latitude">latitude</string>
    <string name="settings_key_calculation_method">calculation_method</string>
    <string name="settings_key_fajr_sun_angle">fajr_sun_angle</string>
    <string name="settings_key_shafai_method">shafai_method</string>
    <string name="settings_key_isha_calculation_method">isha_calculation_method</string>
    <string name="settings_key_isha_sun_angle">isha_sun_angle</string>
    <string name="settings_key_isha_time_offset">isha_time_offset</string>
    <string name="settings_key_use_ramadan_offset">use_ramadan_offset</string>
    <string name="settings_key_ramadan_isha_time_offset">ramadan_isha_time_offset</string>
    <string name="settings_key_all_notifications">all_notifications</string>
    <string name="settings_key_prefast_meal_reminder">prefast_meal_reminder</string>
    <string name="settings_key_water_reminder">water_reminder</string>
    <string name="settings_key_prepare_breakfast_reminder">prepare_breakfast_reminder</string>
    <string name="settings_key_breakfast_near_reminder">breakfast_near_reminder</string>
    <string name="settings_key_theme">theme</string>


    <!--Preferences keys-->

    <string name="preference_should_enable_all_notifications">preference_should_enable_all_notifications</string>


    <!--List preferences labels and values-->

    <string name="theme_label_automatic">Automatic</string>
    <string name="theme_label_dusk">Dusk</string>
    <string name="theme_label_dawn">Dawn</string>

    <string name="theme_value_automatic">automatic</string>
    <string name="theme_value_dusk">dusk</string>
    <string name="theme_value_dawn">dawn</string>

    <string name="calculation_method_label_automatic">Automatic</string>
    <string name="calculation_method_label_islamic_society_of_north_america">Islamic Society of North America</string>
    <string name="calculation_method_label_muslim_world_league">Muslim World League</string>
    <string name="calculation_method_label_umm_al_qura_university_makkah">Umm Al Qura University Makkah</string>
    <string name="calculation_method_label_egyptian_general_authority_of_survey">Egyptian General Authority Of Survey</string>
    <string name="calculation_method_label_institute_of_geophysics_tehran">Institute of Geophysics Tehran</string>
    <string name="calculation_method_label_gulf_region">Gulf Region</string>
    <string name="calculation_method_label_kuwait">Kuwait</string>
    <string name="calculation_method_label_qatar">Qatar</string>
    <string name="calculation_method_label_majlis_ugama_islam_singapura_singapore">Majlis Ugama Islam Singapura Singapore</string>
    <string name="calculation_method_label_union_organization_islamic_de_france">Union Organization Islamic de France</string>
    <string name="calculation_method_label_diyanet_isleri_baskanligi_turkey">Diyanet Isleri Baskanligi Turkey</string>
    <string name="calculation_method_label_spiritual_administration_of_muslims_of_russia">Spiritual Administration of Muslims of Russia</string>
    <string name="calculation_method_label_custom">Custom</string>

    <string name="calculation_method_value_automatic">automatic</string>
    <string name="calculation_method_value_islamic_society_of_north_america">islamic_society_of_north_america</string>
    <string name="calculation_method_value_muslim_world_league">muslim_world_league</string>
    <string name="calculation_method_value_umm_al_qura_university_makkah">umm_al_qura_university_makkah</string>
    <string name="calculation_method_value_egyptian_general_authority_of_survey">egyptian_general_authority_of_survey</string>
    <string name="calculation_method_value_institute_of_geophysics_tehran">institute_of_geophysics_tehran</string>
    <string name="calculation_method_value_gulf_region">gulf_region</string>
    <string name="calculation_method_value_kuwait">kuwait</string>
    <string name="calculation_method_value_qatar">qatar</string>
    <string name="calculation_method_value_majlis_ugama_islam_singapura_singapore">majlis_ugama_islam_singapura_singapore</string>
    <string name="calculation_method_value_union_organization_islamic_de_france">union_organization_islamic_de_france</string>
    <string name="calculation_method_value_diyanet_isleri_baskanligi_turkey">diyanet_isleri_baskanligi_turkey</string>
    <string name="calculation_method_value_spiritual_administration_of_muslims_of_russia">spiritual_administration_of_muslims_of_russia</string>
    <string name="calculation_method_value_custom">custom</string>

    <string name="isha_calculation_method_label_sun_angle">Sun angle</string>
    <string name="isha_calculation_method_label_time_offset">Use fixed time offset</string>

    <string name="isha_calculation_method_value_sun_angle">sun_angle</string>
    <string name="isha_calculation_method_value_time_offset">time_offset</string>
    <string name="time_until_fasting">Time until fasting</string>
    <string name="time_till_next_timing">Time till next timing</string>
    <string name="error_no_location_message">Please set your location.</string>
    <string name="error_unknown_message">An error has occurred.</string>
    <string name="loading_lowercase">loading</string>
    <string name="invalid_settings">Invalid settings.</string>
    <string name="search">Search</string>
    <string name="location_permission_rationale">Your location will not be sent anywhere. The app will calculate the timings locally, and will cross reference your location with a built-in database to determine the closest city to you.</string>
    <string name="access_your_general_location">Access your general location</string>

    <string name="prefast_meal_reminder_title">Only 1 hour till fasting!</string>
    <string name="water_reminder_title">15 minutes till fasting! Drink water!</string>
    <string name="prepare_breakfast_meal_reminder_title">Break-fast in 2 hours. Prepare your meal!</string>
    <string name="breakfast_reminder_title">Break-fast in 15 minutes!</string>

    <string name="fasting_begins_at_template">Fasting today will begin at %s.</string>
    <string name="breakfast_at_template">Break-fast today will be at %s.</string>

    <string name="tap_to_see_countdown">Tap here to see a countdown!</string>
    <string name="preference_title_prefast_meal_reminder">Pre-fast Meal Reminder</string>
    <string name="preference_title_water_reminder">Water Reminder</string>
    <string name="preference_title_prepare_breakfast_reminder">Prepare Breakfast Reminder</string>
    <string name="preference_title_breakfast_reminder">Breakfast Reminder</string>
    <string name="preference_summary_prefast_meal_reminder">Reminds you to eat 1 hour before fasting time.</string>
    <string name="preference_summary_water_reminder">Reminds you to drink water 15 minutes before fasting time.</string>
    <string name="preference_summary_prepare_breakfast_reminder">Reminds you to prepare a meal 2 hours before breakfast time.</string>
    <string name="preference_summary_breakfast_reminder">Reminds you to prepare to eat 15 minutes before breakfast time.</string>
    <string name="countdown_location_initial_text">countdown</string>
    <string name="title_open_source_licenses">Open-source Licenses</string>
    <string name="not_set">Not set.</string>

</resources>