<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:layout="@layout/preference_card"
        app:key="location"
        app:title="Location"
        app:fragment="com.basilalasadi.fasters.view.settings.LocationSettingsFragment"/>

    <Preference
        android:layout="@layout/preference_card"
        app:key="method"
        app:title="Method"
        app:fragment="com.basilalasadi.fasters.view.settings.MethodSettingsFragment"
        />

    <Preference
        android:layout="@layout/preference_card"
        app:key="notifications"
        app:title="Notifications"
        app:fragment="com.basilalasadi.fasters.view.settings.NotificationsSettingsFragment"
        />

    <ListPreference
        android:layout="@layout/preference_card"
        app:key="@string/settings_key_theme"
        app:title="@string/theme"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_entry_values"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:defaultValue="@string/theme_value_automatic"
        app:useSimpleSummaryProvider="true"/>

    <PreferenceCategory
        android:layout="@layout/app_preference_category"
        app:title="@string/about">

        <Preference
            android:layout="@layout/dense_preference_top"
            app:key="about_fasters"
            app:title="@string/about_fasters" />

        <Preference
            android:layout="@layout/dense_preference_bottom"
            app:key="open_source_licenses"
            app:title="@string/open_source_licenses" />

    </PreferenceCategory>

</PreferenceScreen>