<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:statusBarBackground="#1e1e1e"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Set Location"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="#1e1e1e"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automatic_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <Space
                android:layout_width="0dp"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automatic_location_summary"
            />

            <Space
                android:layout_width="0dp"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/buttonLocate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locate"
                style="@style/Widget.App.Button.Primary" />
            <Space
                android:layout_width="0dp"
                android:layout_height="40dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manual_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <Space
                android:layout_width="0dp"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manual_location_summary"
            />

            <Space
                android:layout_width="0dp"
                android:layout_height="30dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.App.InputField.Layout">

                <TextView
                    android:id="@+id/textCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:labelFor="@id/autoCompleteTextViewCountry"
                    style="@style/Widget.App.InputField.Label" />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.App.InputField.Input"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions"
                    app:layout_constraintTop_toBottomOf="@+id/textCountry"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.App.InputField.Layout">

                <TextView
                    android:id="@+id/textCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:labelFor="@id/autoCompleteTextViewCity"
                    style="@style/Widget.App.InputField.Label" />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions"
                    app:layout_constraintTop_toBottomOf="@+id/textCity"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.App.InputField.Input" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/buttonSetLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_location"
                style="@style/Widget.App.Button.Primary" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>