<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:background="#313131"
    tools:context=".view.MainActivity"
    tools:ignore="HardcodedText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.MainActivity">

        <ImageButton
            android:id="@+id/buttonSettings"
            android:contentDescription="Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="4dp"
            android:padding="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_settings_24"
            app:layout_constraintBottom_toTopOf="@+id/tableLayoutQuickInfo"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/circle_shape"
            android:indeterminate="false"
            android:indeterminateOnly="false"
            android:max="180"
            android:progress="0"
            android:progressDrawable="@drawable/circular_progress_bar"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/TextAppearance.App.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCountdownSeprator"
            style="@style/TextAppearance.App.CountdownTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_separator"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/progressBar" />

        <TextView
            android:id="@+id/textViewCountdownHours"
            style="@style/TextAppearance.App.CountdownTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="00"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCountdownSeprator"
            app:layout_constraintEnd_toStartOf="@+id/textViewCountdownSeprator"
            app:layout_constraintTop_toTopOf="@+id/textViewCountdownSeprator" />

        <TextView
            android:id="@+id/textViewCountdownMinutes"
            style="@style/TextAppearance.App.CountdownTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="00"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCountdownSeprator"
            app:layout_constraintStart_toEndOf="@+id/textViewCountdownSeprator"
            app:layout_constraintTop_toTopOf="@+id/textViewCountdownSeprator" />

        <TextView
            android:id="@+id/textViewCountdownLocation"
            style="@style/TextAppearance.App.Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countdown_location_initial_text"
            app:layout_constraintBottom_toTopOf="@+id/textViewCountdownSeprator"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar" />

        <TextView
            android:id="@+id/textViewCountdownHoursLabel"
            style="@style/TextAppearance.App.CountdownLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCountdownHours"
            app:layout_constraintEnd_toEndOf="@+id/textViewCountdownHours"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toStartOf="@+id/textViewCountdownHours" />

        <TextView
            android:id="@+id/textViewCountdownMinutesLabel"
            style="@style/TextAppearance.App.CountdownLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCountdownMinutes"
            app:layout_constraintEnd_toEndOf="@+id/textViewCountdownMinutes"
            app:layout_constraintStart_toStartOf="@+id/textViewCountdownMinutes" />

        <TextView
            android:id="@+id/textViewCountdownSeconds"
            style="@style/TextAppearance.App.CountdownSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toBottomOf="@+id/textViewCountdownSeprator"
            app:layout_constraintVertical_bias="0.4" />

        <TableLayout
            android:id="@+id/tableLayoutQuickInfo"
            style="@style/Widget.App.TableCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginHorizontal="6dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="18dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textViewCurrentTimeLabel"
                    style="@style/TextAppearance.App.TableLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/current_time" />

                <TextView
                    android:id="@+id/textViewCurrentTime"
                    style="@style/TextAppearance.App.TableValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewTimeTillNextTimingLabel"
                    style="@style/TextAppearance.App.TableLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/time_till" />

                <TextView
                    android:id="@+id/textViewTimeTillNextTiming"
                    style="@style/TextAppearance.App.TableValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textViewPrayerTimesLabel"
            style="@style/TextAppearance.App.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/prayer_times"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayoutQuickInfo" />

        <TableLayout
            android:id="@+id/tableLayoutPrayerTimes"
            style="@style/Widget.App.TableCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="6dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPrayerTimesLabel">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="18dp">

                <TextView
                    android:id="@+id/textViewFajrTimingLabel"
                    style="@style/TextAppearance.App.TableLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/fajr" />

                <TextView
                    android:id="@+id/textViewFajrTiming"
                    style="@style/TextAppearance.App.TableValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="18dp">

                <TextView
                    android:id="@+id/textViewDuhrTimingLabel"
                    style="@style/TextAppearance.App.TableLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/duhr" />

                <TextView
                    android:id="@+id/textViewDuhrTiming"
                    style="@style/TextAppearance.App.TableValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="18dp">

                <TextView
                    android:id="@+id/textViewAsrTimingLabel"
                    style="@style/TextAppearance.App.TableLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/asr" />

                <TextView
                    android:id="@+id/textViewAsrTiming"
                    style="@style/TextAppearance.App.TableValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="18dp">

                <TextView
                    android:id="@+id/textViewMagribTimingLabel"
                    style="@style/TextAppearance.App.TableLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/magrib" />

                <TextView
                    android:id="@+id/textViewMagribTiming"
                    style="@style/TextAppearance.App.TableValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewIshaaTimingLabel"
                    style="@style/TextAppearance.App.TableLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/ishaa" />

                <TextView
                    android:id="@+id/textViewIshaaTiming"
                    style="@style/TextAppearance.App.TableValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="" />

            </TableRow>

        </TableLayout>

        <View
            android:layout_height="32dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tableLayoutPrayerTimes"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
